# gpu-kill

./: .gitignore  CI_CD.md  Cargo.toml  Cross.toml  DETAILED.md  README.md  audit.toml  build.rs  deny.toml
.github/workflows/: ci.yml  gpu-testing.yml  hotaisle-gpu-testing.yml  release.yml  self-hosted-setup.md  test-hotaisle-integration.yml
dashboard/: README.md  nuxt.config.ts  package.json  tailwind.config.js
dashboard/assets/css/: main.css
dashboard/components/: AppSidebar.vue
dashboard/pages/: detection.vue  guard.vue  index.vue
dashboard/public/: robots.txt  site.webmanifest  sitemap.xml
docs/: CLOUD_GPU_SETUP.md  HOTAISLE_INTEGRATION.md
mcp/: Cargo.toml  README.md
mcp/src/: lib.rs  main.rs  resources.rs  server.rs  tools.rs  types.rs
scripts/: debug-ci-test.sh  install.ps1  install.sh  run-gpu-tests.sh  setup-gpu-runner.sh  test-hotaisle-integration-simple.sh  test-hotaisle-integration.sh
src/: args.rs  audit.rs  config.rs  coordinator.rs  guard_mode.rs  hotaisle_client.rs  lib.rs  main.rs  nvml_api.rs  proc.rs  process_mgmt.rs  remote.rs  render.rs  rogue_config.rs  rogue_detection.rs  util.rs  vendor.rs  version.rs
tests/: gpu_hardware_tests.rs  integration_tests.rs
