[package]
name = "gpukill"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A production-ready CLI tool for GPU management and monitoring"
license = "MIT"
repository = "https://github.com/yourusername/gpukill"
keywords = ["gpu", "nvidia", "nvml", "cli", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gpukill"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tabled = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nvml-wrapper = "0.11"
sysinfo = "0.30"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.27", features = ["process", "signal"] }
tokio = { version = "1.0", features = ["rt", "time", "process"] }
anyhow = "1.0"
hostname = "0.3"
libc = "0.2"
toml = "0.8"
dirs = "5.0"
regex = "1.10"
glob = "0.3"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"

[features]
default = []
mock_nvml = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
